add example script run by haproxy

--- a/usr-local-etc-haproxy/haproxy.cfg
+++ b/usr-local-etc-haproxy/haproxy.cfg
@@ -1,5 +1,11 @@
-# _md5hash=9616f44f63db863fb3dfe77e5055aeec
-# _version=3
+# _md5hash=33f872a2711078a92b26bba57d4e8f6a
+# _version=6
+# Dataplaneapi managed File
+# changing file directly can cause a conflict if dataplaneapi is running
+# Dataplaneapi managed File
+# changing file directly can cause a conflict if dataplaneapi is running
+# Dataplaneapi managed File
+# changing file directly can cause a conflict if dataplaneapi is running
 # Dataplaneapi managed File
 # changing file directly can cause a conflict if dataplaneapi is running
 # Dataplaneapi managed File
@@ -60,3 +66,7 @@ backend default
 program api 
   command /usr/bin/dataplaneapi -f /usr/local/etc/haproxy/dataplaneapi.hcl
   no option start-on-reload
+
+# This is an example of using haproxy.cfg to run a script.
+program hello 
+  command /usr/local/etc/haproxy/hello.sh
